# manipulation_project

get_cube_pose/: CMakeLists.txt
get_cube_pose/launch/: get_pose_client.launch.py
moveit2_scripts/: CMakeLists.txt
moveit2_scripts/launch/: pick_and_place.launch.py  pick_and_place_perception.launch.py  pick_and_place_perception_real.launch.py
moveit2_scripts/src/: pick_and_place.cpp  pick_and_place_perception.cpp  pick_and_place_perception_real.cpp
my_moveit_config/: .setup_assistant  package.xml
my_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  name.srdf  ros2_controllers.yaml
real_moveit_config/: .setup_assistant  package.xml
real_moveit_config/config/: moveit_controllers.yaml  name.srdf
